--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8008",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-moralis": "^0.3.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
